--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 </head>
 
 <body>
-    <h1 class="text"><a class="link">Volumetric buttons</a></h1>
-
-    <div>
-        <button class="button submit" type="submit">Submit</button>
+    <div class="container">
+        <div class="wrapper">
+            <h1>Volumetric buttons</h1>
+            <button class="button submit" type="submit">Submit</button>
+            <button class="button dismiss" type="button">Dismiss</button>
+            <button class="button rainbow-button" type="button">???</button>
+        </div>
     </div>
-
-    <button class="button dismiss" type="button">Dismiss</button>
-
-    <button class="button rainbow-button" type="button">???</button>
 
 </body>
 
